--- a/CGExamples Solution/ExtensionSettings/git/Settings.json
+++ b/CGExamples Solution/ExtensionSettings/git/Settings.json
@@ -2,5 +2,5 @@
 	"serverType":"github",
 	"gitEmail":"christian.goergen@4d.com",
 	"gitIsPrivateRepository":"false",
-	"gitURL":"https://github.com/ChristianGoergen"
+	"gitURL":"https://github.com/christiangoergen"
 }
